Fixed color contrast on some links

--- a/css/libanswer.css
+++ b/css/libanswer.css
@@ -63,6 +63,7 @@ ul.s-la-faq-topics.list-inline {
 .s-la-faq-listing-meta .label-topic, .s-la-faq-topics .label-topic {
 	font-size: 1.2em;
 	line-height: 2.2em;
+	background-color: #DDE0E3 !important;
 }
 
 .s-la-faq-topics.list-inline > li {
@@ -278,6 +279,7 @@ li.cms-navigation-sub:hover ul {
 .pagination li.active a { color: #fff !important; }
 .s-la-faq-owner { display: none; }
 .fa, .far, .fas { font-family: FontAwesome !important; }
+.s-srch-params h3 { color: #121212; }
 
 @media screen and (min-width: 600px) {
 div#s-la-box-20403,
